multi lenguaje added, and email send function

--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,18 @@ textarea:focus, input:focus{
 }
 
 
+.visiblePersona {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 2s linear;
+  }
+
+.hiddenPersona {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 2s, opacity 2s linear;
+  }
+
 
 
 @media (min-width: 1024px) { 
